--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,6 @@ jobs:
           python-version: 3.9
       - name: Install requirements
         run:
-          pip install -r requirements.txt
-          pip install -r test_requirements.txt
+          pip install -r src/requirements.txt
       - name: Run Tests
         run: pytest
